added notifications